source/blender/blenkernel/intern/scene.c
@@ -444,6 +444,7 @@ static void scene_free_data(ID *id)
    * collections in the scene need to do it too? */
   if (scene->master_collection) {
     BKE_collection_free(scene->master_collection);
+    BKE_libblock_free_data_py(&scene->master_collection->id);
     MEM_freeN(scene->master_collection);
     scene->master_collection = NULL;
   }
